--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "@mui/material": "^5.14.11",
     "@mui/x-data-grid": "^6.16.1",
     "cors-anywhere": "^0.4.4",
+    "postgres": "^3.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-table": "^7.8.0"
   },
   "devDependencies": {
+    "@playwright/test": "^1.42.1",
+    "@types/node": "^20.11.24",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
