--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@mui/material": "^5.14.11",
     "@mui/x-data-grid": "^6.16.1",
     "cors-anywhere": "^0.4.4",
-    "postgres": "^3.4.3",
+    "firebase": "^10.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-table": "^7.8.0"
