--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "firebase": "^10.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.23.0",
     "react-table": "^7.8.0"
   },
   "devDependencies": {
